# internal/constant/models/db/category.go
@@ -1,0 +1,7 @@
+package db
+
+type Category struct {
+	BaseModel
+	StoreID int64  `gorm:"column:store_id" json:"store_id"`
+	Name    string `gorm:"column:name;not null" json:"name"`
+}
